Change log for hexer, the multi-view binary editor

0.1.6	not yet ;)

0.1.5	2009/09/04
	- taken over by Peter Pentchev <roam@ringlet.net>
	- remove the "bdir" and "ef" settings from the Vim modelines to
	  make them actually acceptable to today's Vim
	- remove most of the settings from the Vim modelines
	- add a config.posix file to reflect a modern POSIX-like system
	- bring config.linux up to date
	- add a HAVE_STRERROR definition to the config files and roll out
	  our own strerror() function if needed
	- clean up the header files:
	  - remove "extern" before the function prototypes
	  - declare all the hexer functions and variables used by
	    other modules
	  - add several header files so that all hexer functions and
	    variables are declared
	  - use ANSI prototypes for all functions
	  - let the prototypes for some functions catch up with reality
	- clean up the source files:
	  - remove the "extern" definitions for the standard C library
	    functions - just include the header files instead
	  - replace the "extern" definitions for hexer functions and
	    variables with the appropriate includes
	  - fix various C compiler warnings
	  - fix some function definitions and calls to match the prototypes
	  - convert all functions to ANSI C prototypes
	  - remove a couple of redundant declarations of functions and vars
	  - rename several variables to avoid collisions
	  - check the result status of various I/O functions
	- clean up the Makefile:
	  - allow the user to override most of the variables
	  - no need to ignore the result of "rm -f" :)
	  - use CFLAGS when building bin2c
	  - do not try to follow dependencies for termlib.c
	  - simplify the "install" target and honor DESTDIR if set
	- rename the KEY_* constants to HXKEY_* to avoid conflicts with
	  the curses header files
	- add an "hx_" prefix to the "lines", "columns", and
	  "insert_character" variables for the same reason
	- garbage-collect some unused functions
	- fix the manual page syntax: